--- a/src/asset/Header.scss
+++ b/src/asset/Header.scss
@@ -23,10 +23,10 @@ body{
 
 @media screen  and (max-width: 1300px){
   .navLinks{
-    display: none;
+    display: block;
   }
   .icons{
-    display: none;
+    display: block;
   }
   .closes{
     display: block;
