--- a/src/asset/Header.css
+++ b/src/asset/Header.css
@@ -25,10 +25,10 @@ body {
 
 @media screen and (max-width: 1300px) {
   .navLinks {
-    display: none;
+    display: block;
   }
   .icons {
-    display: none;
+    display: block;
   }
   .closes {
     display: block;
