--- a/src/asset/Header.scss
+++ b/src/asset/Header.scss
@@ -18,18 +18,48 @@ body{
         gap: 16px;
         // padding: 8px 16px;
     }
+
+}
+.closes{
+  margin-left: 70%;
 }
 
 
 @media screen  and (max-width: 1300px){
   .navLinks{
-    display: block;
+    // display: none;
+    // position: absolute;
+    margin-top: 60px;
+    margin-left: -128px;
+    margin-right: -89px;
+    padding-left: 0;
+  }
+  .navLinks li{
+    padding-bottom: 20px;
+    text-align: start;
   }
   .icons{
-    display: block;
+    // position: absolute;
+    // display: none;
+    margin-top:340px;
+    margin-right: 820px;
+    color: rgb(29, 7, 7)
+
   }
   .closes{
-    display: block;
+    display: flex;
+    width: 34px;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media screen  and (min-width: 1300px){
+  .navLinks{
+    display: flex;
+  }
+  .icons{
+    display: flex;
   }
 }
     
