Changed new things

--- a/src/components/Sellers/TopSellers.css
+++ b/src/components/Sellers/TopSellers.css
@@ -12,8 +12,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 13%;
-  margin-right: 13%;
   margin-top: 20px;
   margin: 20px 13% 20px 13%;
 }
@@ -42,6 +40,10 @@ button {
   flex-grow: 1;
 }
 
+.container {
+  margin: 0 auto;
+}
+
 .content {
   background: white;
   padding-top: 20px;
@@ -65,13 +67,15 @@ button {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 20px;
-  width: 75%;
+  margin-right: 13%;
   margin-left: 13%;
 }
 
 .items .item {
   display: block;
+  width: 253px;
+  margin-bottom: 40px;
+  border: 1px solid #f3efef;
 }
 
 .items .item img {
