--- a/src/components/CardSlider/CardSlider.css
+++ b/src/components/CardSlider/CardSlider.css
@@ -5,6 +5,9 @@
   .mobile {
     display: none;
   }
+  .desktop .shop {
+    margin-top: -2rem;
+  }
 }
 
 @media screen and (max-width: 1100px) {
@@ -13,6 +16,9 @@
   }
   .mobile {
     display: none;
+  }
+  .tablet .shop {
+    margin-top: -3rem;
   }
 }
 
@@ -26,4 +32,12 @@
   .mobile {
     display: block;
   }
+  .mobile img {
+    width: 100%;
+    height: 470px;
+  }
+}
+
+img {
+  object-fit: cover;
 }
