--- a/src/components/CardSlider/CardSlider.scss
+++ b/src/components/CardSlider/CardSlider.scss
@@ -5,6 +5,9 @@
     .mobile{
         display: none;
     }
+    .desktop .shop{
+        margin-top: -2rem;
+    }
 }
 @media screen and (max-width:1100px){
     .desktop{
@@ -12,6 +15,9 @@
     }
     .mobile{
         display: none;
+    }
+    .tablet .shop{
+        margin-top: -3rem;
     }
 }
 @media screen and (max-width:800px){
@@ -24,4 +30,11 @@
     .mobile{
         display: block;
     }
+    .mobile img{
+        width: 100%;
+        height: 470px ;
+    }
+}
+img{
+    object-fit: cover;
 }
