--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -3,7 +3,7 @@
 	padding: 0;
   }
   body {
-	background-color: #f5f5f5;
+	/* background-color: #f5f5f5; */
 	font-family: Arial;
   }
   .img-cover {
