--- a/src/components/Products/product.scss
+++ b/src/components/Products/product.scss
@@ -236,7 +236,7 @@ header i{
         }
         a{
             color: inherit;
-            text-decoration: underline !important;
+            // text-decoration: underline !important;
         }
     }
     .share{
