--- a/src/components/Sellers/TopSellers.css
+++ b/src/components/Sellers/TopSellers.css
@@ -67,14 +67,14 @@ button {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-right: 13%;
-  margin-left: 13%;
+  max-width: 1140px;
 }
 
 .items .item {
   display: block;
   width: 253px;
-  margin-bottom: 40px;
+  margin-bottom: 60px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
   border: 1px solid #f3efef;
 }
 
@@ -83,13 +83,13 @@ button {
   height: 300px;
 }
 
-.items .item .badge {
+.items .item .badgeintop {
   padding: 5px 10px;
   background-color: #fff;
   color: #1f1f1f;
   position: absolute;
   margin-top: -265px;
-  margin-left: -126px;
+  margin-left: 0px;
 }
 
 .items .item .item-info {
@@ -107,4 +107,32 @@ button {
   padding-bottom: 8px;
   color: #1f1f1f;
   font-size: 16px;
+}
+
+@media screen and (min-width: 1100px) {
+  .items {
+    margin-left: -13%;
+    margin-right: -13%;
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  .items {
+    margin-left: 0%;
+    margin-right: 0%;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .items {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+}
+
+@media screen and (max-width: 775px) {
+  .items .item {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
