--- a/src/components/Sellers/TopSellers.scss
+++ b/src/components/Sellers/TopSellers.scss
@@ -56,27 +56,30 @@
 	display: block;
   }
   .items{
-    display: flex;
+  display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-  margin-right: 13%;
-  margin-left: 13%;
+  // margin-right: 13%;
+  // margin-left: 13%;
+  max-width: 1140px;
     .item{
         display: block;
         width: 253px;
-        margin-bottom: 40px;
+        margin-bottom: 60px;
+        // box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; 
+        box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
         border: 1px solid #f3efef;
         img{
             width: 253px;
             height: 300px;
         }
-        .badge{
+        .badgeintop{
             padding: 5px 10px;
             background-color: #fff;
             color: #1f1f1f;
             position: absolute;
             margin-top: -265px;
-            margin-left: -126px;
+            margin-left: 0px;
         }
         .item-info{
             margin-top: 30px;
@@ -93,4 +96,29 @@
             }
         }
     }
+}  
+
+@media screen and (min-width:1100px){
+  .items{
+    margin-left: -13%;
+    margin-right: -13%;
+  }
+}
+@media screen and (max-width:1300px){
+  .items{
+    margin-left: 0%;
+    margin-right: 0%;
+  }
+}
+@media screen and (max-width:820px){
+  .items{
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+}
+@media screen and (max-width:775px){
+  .items .item{
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
