--- a/src/components/Feedback/Feedback.scss
+++ b/src/components/Feedback/Feedback.scss
@@ -3,3 +3,46 @@
     margin: 20px 13%;
     margin-bottom: 20px;
   }
+  @media screen and (min-width:1100px){
+    .tablet{
+        display: none;
+    }
+    .mobile{
+        display: none;
+    }
+    .desktop .shop{
+        margin-top: -2rem;
+    }
+}
+@media screen and (max-width:1100px){
+    .desktop{
+        display: none;
+    }
+    .mobile{
+        display: none;
+    }
+    .tablet .shop{
+        margin-top: -3rem;
+    }
+}
+@media screen and (max-width:800px){
+    .desktop{
+        display: none;
+    }
+    .tablet{
+        display: none;
+    }
+    .mobile{
+        display: block;
+    }
+    .comment-1, .comment-2 , .comment-3{
+      margin: 0 auto;
+    }
+    // .mobile img{
+    //     width: 100%;
+    //     height: 470px ;
+    // }
+}
+// img{
+//     object-fit: cover;
+// }
