--- a/src/components/Products/product.css
+++ b/src/components/Products/product.css
@@ -30,46 +30,6 @@ header header i {
   padding-left: 10px;
 }
 
-.promo {
-  display: flex;
-  justify-content: space-between;
-  background-color: whitesmoke;
-  padding-top: .75rem;
-  padding-bottom: .75rem;
-}
-
-.promo .sec-1 {
-  margin-left: 13%;
-  display: flex;
-  justify-content: space-between;
-  width: 30%;
-}
-
-.promo .sec-1 span {
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  font-size: .6875rem;
-}
-
-.promo .sec-2 {
-  width: 30%;
-  margin-right: 13%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.promo .sec-2 .sec-2-1 span {
-  padding-right: 30px;
-}
-
-.promo .sec-2 .sec-2-2 {
-  display: flex;
-  justify-content: space-between;
-  width: 25%;
-  padding-right: 25px;
-  color: #767676;
-}
-
 .main-details {
   margin-left: 13%;
   margin-right: 13%;
@@ -269,6 +229,7 @@ header header i {
 
 .product-info .product-endof a {
   color: inherit;
+  text-decoration: underline !important;
 }
 
 .product-info .share {
@@ -315,6 +276,10 @@ header header i {
 }
 
 .nav-tabs .nav-link:hover {
+  color: #fd7e14;
+}
+
+.nav-tabs .nav-link:checked {
   color: #fd7e14;
 }
 
@@ -366,8 +331,7 @@ header header i {
   background-color: #fff;
   color: #1f1f1f;
   position: absolute;
-  margin-top: 20px;
-  margin-left: -253px;
+  margin-top: -258px;
 }
 
 .items .item .item-info {
@@ -384,4 +348,20 @@ header header i {
   padding-bottom: 8px;
   color: #1f1f1f;
   font-size: 16px;
+}
+
+.btn {
+  cursor: pointer;
+  box-sizing: border-box;
+  border: 0;
+  padding: 0px 20px;
+  font-size: 18px;
+  line-height: 30px;
+  color: #74777d;
+  background-color: transparent;
+  outline: none;
+}
+
+.btn:hover {
+  color: #282a2e;
 }
