--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -9,6 +9,11 @@ a {
   text-align: start;
 }
 
+.categorydeanchor a {
+  text-decoration: none;
+  color: white;
+}
+
 h5 {
   font-weight: 500;
   text-align: start;
