--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -7,6 +7,10 @@ a{
     color: #bababa;
     text-align: start;
 }
+.categorydeanchor a{
+  text-decoration: none;
+  color: white ;
+}
 h5{
     font-weight: 500;
     text-align: start;
