--- a/src/components/Sellers/TopSellers.css
+++ b/src/components/Sellers/TopSellers.css
@@ -109,6 +109,14 @@ button {
   font-size: 16px;
 }
 
+@media screen and (min-width: 1400px) {
+  .py-24 .container {
+    max-width: 1519px !important;
+    margin: 0 auto !important;
+    padding: 0 !important;
+  }
+}
+
 @media screen and (min-width: 1100px) {
   .items {
     margin-left: -13%;
@@ -120,6 +128,7 @@ button {
   .items {
     margin-left: 0%;
     margin-right: 0%;
+    margin: 0 auto !important;
   }
 }
 
