--- a/src/components/Sellers/TopSellers.scss
+++ b/src/components/Sellers/TopSellers.scss
@@ -100,6 +100,13 @@
         }
     }
 }  
+@media screen and (min-width:1400px){
+ .py-24 .container{
+    max-width: 1519px !important;
+    margin: 0 auto !important;
+    padding: 0 !important;
+  }
+}
 
 @media screen and (min-width:1100px){
   .items{
@@ -111,6 +118,7 @@
   .items{
     margin-left: 0%;
     margin-right: 0%;
+    margin: 0 auto !important;
   }
 }
 @media screen and (max-width:820px){
