--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,60 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import '~antd/dist/antd.css';
 
 body{
     font-family: Roboto, Helvetica, Arial, sans-serif;
 }
+
+.ant-input:focus,.ant-input:hover{
+    border-color: black;
+    box-shadow:  0px 0px 2px rgba(111,111,111,.5);
+  }
+  .ant-input-affix-wrapper-focused,.ant-input-password:hover,.ant-input-password:focus{
+    border-color: black;
+    box-shadow:  0px 0px 2px rgba(111,111,111,.5);
+  }
+  .ant-input-affix-wrapper:not(.ant-input-affix-wrapper-disabled):hover {
+    border-color: black;
+    border-right-width: 1px;
+    z-index: 1;
+  }
+  .ant-select-selector:hover,.ant-select-selector:active,.ant-select-selector:focus{
+    border-color: black;
+    box-shadow:  0px 0px 2px rgba(111,111,111,.5);
+  }
+  .ant-select-selector{
+    background-color: red;
+  }
+  
+  
+  .ant-select:not(.ant-select-disabled):hover .ant-select-selector {
+      border-color: black;
+      border-right-width: 1px;
+  }
+  .ant-select-focused,.ant-select-focused:focus{
+    border-color: black;
+    box-shadow:  0px 0px 2px rgba(111,111,111,.5);
+  }
+  .ant-select-focused:not(.ant-select-disabled).ant-select:not(.ant-select-customize-input) .ant-select-selector {
+   border-color: black;
+   box-shadow:  0px 0px 2px rgba(111,111,111,.5);
+  }
+  .ant-checkbox-checked .ant-checkbox-inner {
+    background-color: black;
+    border-color: rgb(0, 0, 0);
+  }
+  .ant-checkbox-inner:hover,.ant-checkbox-checked:hover,.ant-checkbox,.ant-checkbox:hover {
+    border-color: black;
+  }
+  .ant-checkbox-checked::after{
+    border-color: black;
+  }
+  .ant-checkbox:hover .ant-checkbox-inner{
+    border-color: black;
+  }
+  .ant-checkbox-inner::selection{
+    background-color: black;
+  }
+   
