--- a/src/components/Products/product.css
+++ b/src/components/Products/product.css
@@ -14,18 +14,15 @@ a {
 header {
   color: 1F1F1F;
 }
-
 header .shopper-icon {
   font-size: 28px;
   text-decoration: none;
   color: 1F1F1F;
 }
-
 header .links a {
   font-size: 18px;
   padding-left: 10px;
 }
-
 header header i {
   padding-left: 10px;
 }
@@ -37,17 +34,14 @@ header header i {
   justify-content: space-between;
   flex-basis: 50%;
 }
-
 .main-details .images {
   display: flex;
   flex-basis: 50%;
 }
-
 .main-details .images .main-image img {
   position: absolute;
   max-width: 37%;
 }
-
 .main-details .images .main-image .badge {
   position: absolute;
   top: 260px;
@@ -56,10 +50,9 @@ header header i {
   color: #fff;
   line-height: 1;
   font-weight: 500;
-  font-size: .6875em;
+  font-size: 0.6875em;
   padding: 0.5rem 1em;
 }
-
 .main-details .images .sub-image {
   width: 90px;
   height: 90px;
@@ -72,76 +65,62 @@ header header i {
   margin-left: 10%;
   flex-basis: 50%;
 }
-
 .product-info .view {
   display: flex;
   justify-content: space-between;
 }
-
 .product-info .view .review {
   display: flex;
   align-self: center;
   align-items: center;
   height: 20px;
 }
-
 .product-info .view .review a {
   margin-left: 15px;
   color: black;
 }
-
 .product-info .view h6 {
   color: #767676;
 }
-
 .product-info h4 {
   font-size: 2rem;
   margin-bottom: 0.5rem;
 }
-
 .product-info .price {
   display: flex;
   align-items: center;
   gap: 10px;
   margin-bottom: 2rem;
 }
-
 .product-info .price .endirimsiz {
   color: #a6a6a6;
   text-decoration: line-through;
   font-size: 1.125rem;
 }
-
 .product-info .price .endirimli {
-  color: #ff6f61;
+  color: rgb(255, 111, 97);
   font-size: 1.5rem;
   font-weight: bold;
 }
-
 .product-info .price .stock {
-  font-size: .9375rem;
+  font-size: 0.9375rem;
   padding-top: 5px;
 }
-
 .product-info .color .image {
   display: flex;
   gap: 10px;
 }
-
 .product-info .color .image .image1, .product-info .color .image .image2, .product-info .color .image img {
   width: 80px;
   height: 80px;
 }
-
 .product-info .product-size {
   margin-bottom: 1.25rem;
   margin-top: 2rem;
 }
-
 .product-info .product-size span {
   margin-bottom: 1.5rem;
 }
-
 .product-info .product-size .size-table {
   display: grid;
   flex-direction: row;
@@ -149,7 +128,6 @@ header header i {
   margin-top: 1.5rem;
   margin-bottom: 4rem;
 }
-
 .product-info .product-size .size-table .size {
   display: flex;
   justify-content: center;
@@ -160,12 +138,10 @@ header header i {
   margin-right: 5px;
   border: 1px solid #ddd;
 }
-
 .product-info .addcart-wish {
   display: flex;
   justify-content: space-between;
 }
-
 .product-info .addcart-wish .select {
   width: 25%;
   height: 60px;
@@ -173,14 +149,12 @@ header header i {
   text-align: center;
   font-size: 20px;
 }
-
 .product-info .addcart-wish .select span {
   display: flex;
   justify-content: center;
   align-items: center;
   color: red;
 }
-
 .product-info .addcart-wish .addtocart {
   display: flex;
   justify-content: center;
@@ -192,12 +166,10 @@ header header i {
   color: #fff;
   cursor: pointer;
 }
-
 .product-info .addcart-wish .addtocart h5 {
   margin: 0;
   font-size: 1rem;
 }
-
 .product-info .addcart-wish .wishlist {
   width: 27%;
   height: 60px;
@@ -208,37 +180,30 @@ header header i {
   border: 1px solid #1f1f1f;
   cursor: pointer;
 }
-
 .product-info .addcart-wish .wishlist:hover {
   background-color: #1f1f1f;
   color: #fff;
 }
-
 .product-info .addcart-wish .wishlist h5 {
   margin: 0;
 }
-
 .product-info .product-endof {
   margin-bottom: 2rem;
   margin-top: 2rem;
 }
-
 .product-info .product-endof h5 {
   color: #525252;
 }
-
 .product-info .product-endof a {
   color: inherit;
   text-decoration: underline !important;
 }
-
 .product-info .share {
   display: flex;
   max-width: 30%;
   justify-content: space-between;
   align-items: center;
 }
-
 .product-info .share h5 {
   margin-right: 1rem !important;
   margin: auto;
@@ -246,12 +211,10 @@ header header i {
   text-align: center;
   align-items: center;
 }
-
 .product-info .share .icons {
   gap: 10px;
   display: flex;
 }
-
 .product-info .share .icons .icon {
   padding: 10px;
   border-radius: 50%;
@@ -270,15 +233,12 @@ header header i {
   color: black;
   padding-bottom: 20px;
 }
-
 .nav-tabs .nav-link {
   color: #1f1f1f;
 }
-
 .nav-tabs .nav-link:hover {
   color: #fd7e14;
 }
-
 .nav-tabs .nav-link:checked {
   color: #fd7e14;
 }
@@ -294,16 +254,13 @@ header header i {
   color: #525252;
   line-height: 29px;
 }
-
 #descriptionTab ul {
   display: block;
   grid-template-columns: auto auto;
 }
-
 #descriptionTab ul li {
   list-style: none;
 }
-
 #descriptionTab .info {
   display: flex;
   gap: 20%;
@@ -316,16 +273,13 @@ header header i {
   margin-left: 13%;
   margin: 5rem 13% 1.5rem 13%;
 }
-
 .items .item {
   display: block;
 }
-
 .items .item img {
   width: 253px;
   height: 300px;
 }
-
 .items .item .badge {
   padding: 5px 10px;
   background-color: #fff;
@@ -333,15 +287,12 @@ header header i {
   position: absolute;
   margin-top: -258px;
 }
-
 .items .item .item-info {
   margin-top: 30px;
 }
-
 .items .item .item-info a, .items .item .item-info .price {
   color: #767676;
 }
-
 .items .item .item-info h5 {
   opacity: 1;
   padding-top: 10px;
@@ -364,4 +315,4 @@ header header i {
 
 .btn:hover {
   color: #282a2e;
-}
+}/*# sourceMappingURL=product.css.map */
