--- a/src/components/Feedback/Feedback.css
+++ b/src/components/Feedback/Feedback.css
@@ -15,7 +15,6 @@
     margin-top: -2rem;
   }
 }
-
 @media screen and (max-width: 1100px) {
   .desktop {
     display: none;
@@ -27,7 +26,6 @@
     margin-top: -3rem;
   }
 }
-
 @media screen and (max-width: 800px) {
   .desktop {
     display: none;
@@ -41,4 +39,4 @@
   .comment-1, .comment-2, .comment-3 {
     margin: 0 auto;
   }
-}
+}/*# sourceMappingURL=Feedback.css.map */
