--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -47,7 +47,7 @@ header i {
 .card {
   word-wrap: break-word;
   background-clip: border-box;
-  border: 0 solid rgba(18, 18, 18, 0.125);
+  border: 0 solid hsla(0deg, 0%, 7%, 0.125);
   display: flex;
   flex-direction: column;
   min-width: 0;
@@ -77,10 +77,13 @@ header i {
   line-height: 1.5rem;
   padding: 0.875rem 1.75rem;
   text-align: center;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   vertical-align: middle;
 }
 
 .border-bottom {
   border-bottom: 1px solid #e5e5e5 !important;
-}
+}/*# sourceMappingURL=Footer.css.map */
