--- a/src/components/Sellers/TopSellers.css
+++ b/src/components/Sellers/TopSellers.css
@@ -69,7 +69,6 @@ button {
   justify-content: space-between;
   max-width: 1140px;
 }
-
 .items .item {
   display: block;
   width: 253px;
@@ -77,12 +76,10 @@ button {
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
   border: 1px solid #f3efef;
 }
-
 .items .item img {
   width: 253px;
   height: 300px;
 }
-
 .items .item .badgeintop {
   padding: 5px 10px;
   background-color: #fff;
@@ -91,16 +88,13 @@ button {
   margin-top: -265px;
   margin-left: 0px;
 }
-
 .items .item .item-info {
   margin-top: 30px;
   text-align: start;
 }
-
 .items .item .item-info a, .items .item .item-info .price {
   color: #767676;
 }
-
 .items .item .item-info h5 {
   opacity: 1;
   padding-top: 10px;
@@ -108,7 +102,6 @@ button {
   color: #1f1f1f;
   font-size: 16px;
 }
-
 @media screen and (min-width: 1400px) {
   .py-24 .container {
     max-width: 1519px !important;
@@ -116,14 +109,12 @@ button {
     padding: 0 !important;
   }
 }
-
 @media screen and (min-width: 1100px) {
   .items {
     margin-left: -13%;
     margin-right: -13%;
   }
 }
-
 @media screen and (max-width: 1300px) {
   .items {
     margin-left: 0%;
@@ -131,17 +122,15 @@ button {
     margin: 0 auto !important;
   }
 }
-
 @media screen and (max-width: 820px) {
   .items {
     margin-left: 5%;
     margin-right: 5%;
   }
 }
-
 @media screen and (max-width: 775px) {
   .items .item {
     margin-left: auto;
     margin-right: auto;
   }
-}
+}/*# sourceMappingURL=TopSellers.css.map */
