--- a/src/pages/checkout/checkoutPage/CheckoutPage.css
+++ b/src/pages/checkout/checkoutPage/CheckoutPage.css
@@ -4,7 +4,6 @@
   /* Buttons and links */
   /* spinner/processing state, errors */
 }
-
 .stripe-checkout body {
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   font-size: 16px;
@@ -15,7 +14,6 @@
   height: 100vh;
   width: 100vw;
 }
-
 .stripe-checkout form {
   width: 30vw;
   min-width: 500px;
@@ -24,19 +22,16 @@
   border-radius: 7px;
   padding: 40px;
 }
-
 .stripe-checkout #payment-message {
-  color: #697386;
+  color: rgb(105, 115, 134);
   font-size: 16px;
   line-height: 20px;
   padding-top: 12px;
   text-align: center;
 }
-
 .stripe-checkout #payment-element {
   margin-bottom: 24px;
 }
-
 .stripe-checkout button {
   background-color: #5469d4 !important;
   font-family: Arial, sans-serif;
@@ -52,22 +47,18 @@
   box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
   width: 100%;
 }
-
 .stripe-checkout button:hover {
   filter: contrast(115%);
 }
-
 .stripe-checkout button:disabled {
   opacity: 0.5;
   cursor: default;
 }
-
 .stripe-checkout .spinner,
 .stripe-checkout .spinner:before,
 .stripe-checkout .spinner:after {
   border-radius: 50%;
 }
-
 .stripe-checkout .spinner {
   color: #ffffff;
   font-size: 22px;
@@ -77,17 +68,13 @@
   width: 20px;
   height: 20px;
   box-shadow: inset 0 0 0 2px;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
   transform: translateZ(0);
 }
-
 .stripe-checkout .spinner:before,
 .stripe-checkout .spinner:after {
   position: absolute;
   content: "";
 }
-
 .stripe-checkout .spinner:before {
   width: 10.4px;
   height: 20.4px;
@@ -95,12 +82,10 @@
   border-radius: 20.4px 0 0 20.4px;
   top: -0.2px;
   left: -0.2px;
-  -webkit-transform-origin: 10.4px 10.2px;
   transform-origin: 10.4px 10.2px;
   -webkit-animation: loading 2s infinite ease 1.5s;
   animation: loading 2s infinite ease 1.5s;
 }
-
 .stripe-checkout .spinner:after {
   width: 10.4px;
   height: 10.2px;
@@ -108,23 +93,26 @@
   border-radius: 0 10.2px 10.2px 0;
   top: -0.1px;
   left: 10.2px;
-  -webkit-transform-origin: 0px 10.2px;
   transform-origin: 0px 10.2px;
   -webkit-animation: loading 2s infinite ease;
   animation: loading 2s infinite ease;
 }
-
-@keyframes loading {
+@-webkit-keyframes loading {
   0% {
-    -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
   100% {
-    -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
-
+@keyframes loading {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 @media only screen and (max-width: 600px) {
   .stripe-checkout form {
     width: 80vw;
@@ -136,4 +124,4 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-}
+}/*# sourceMappingURL=CheckoutPage.css.map */
