--- a/src/pages/user/register.css
+++ b/src/pages/user/register.css
@@ -4,42 +4,35 @@
   margin-bottom: 0;
   font-family: "Montserrat", sans-serif;
 }
-
 .elnurregister header {
   display: flex;
   justify-content: space-between;
   margin: 0;
 }
-
 .elnurregister header h1 {
   margin: 0;
   padding: 0;
-  color: #1c1c1a;
+  color: rgb(28, 28, 26);
   font-family: "Dancing Script";
   font-size: 3rem;
 }
-
 .elnurregister body {
   margin: 0;
 }
-
 .elnurregister .Reg-form-container .form {
   /* margin-left: 5rem;
   margin-top: 2rem; */
   box-shadow: 15px;
   width: 100%;
 }
-
 .elnurregister .footer {
   margin-top: 0.5rem;
   font-family: "Montserrat", sans-serif;
 }
-
 .elnurregister .form {
   display: flex;
   justify-content: center;
 }
-
 .elnurregister .form .form-body {
   display: inline-block;
   width: 35rem;
@@ -48,12 +41,10 @@
   border-radius: 0.5rem;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
-
 .elnurregister .form .form-body label {
   font-family: "Montserrat", sans-serif;
   font-weight: bolder;
 }
-
 .elnurregister .form .form-body input {
   width: 100%;
   height: 3rem;
@@ -61,14 +52,12 @@
   margin-bottom: 1rem;
   /* background: rgb(209, 207, 207); */
   border-color: #ffffff;
-  border: 1px solid #9a9696;
+  border: 1px solid rgb(154, 150, 150);
   transition: 0.5s;
 }
-
 .elnurregister .form .form-body input:hover {
   background: white;
 }
-
 .elnurregister .form .form-body .btn {
   background-color: black;
   font-family: "Montserrat", sans-serif;
@@ -78,7 +67,6 @@
   color: aliceblue;
   margin-top: 1rem;
 }
-
 .elnurregister .form-body h1 {
   font-family: "Montserrat", sans-serif;
   font-weight: bolder;
@@ -88,16 +76,13 @@
   justify-content: center;
   width: 100%;
 }
-
 .elnurregister .lastinput {
   display: flex;
   justify-content: space-between;
 }
-
 .elnurregister .lastinput .password input {
   width: 15rem;
 }
-
 .elnurregister .lastinput .confirm-password input {
   width: 18rem;
-}
+}/*# sourceMappingURL=register.css.map */
