--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import '~antd/dist/antd.css';
-
+/* @import '~antd/dist/antd.css'; */
+/*  */
 body{
     font-family: Roboto, Helvetica, Arial, sans-serif;
 }
